base/components/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/connection-proxy-header: ""
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,X-Gnfd-Unsigned-Msg,X-Gnfd-Txn-Hash,Date,X-Gnfd-Object-ID,X-Gnfd-Piece-Index,X-Gnfd-Redundancy-Index,Address,X-Gnfd-User-Address"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-Gnfd-Request-ID,X-Gnfd-Signed-Msg,X-Gnfd-Object-ID,X-Gnfd-Integrity-Hash,X-Gnfd-Piece-Hash"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/limit-connections: "20" # number of concurrent connections allowed from a single IP address. (multiple by the number of ingress instances)
    nginx.ingress.kubernetes.io/limit-rps: "5" # number of requests accepted from a given IP each second.
    nginx.ingress.kubernetes.io/limit-rpm: "100" # number of requests accepted from a given IP each second.
  name: gateway
spec:
  ingressClassName: nginx
  rules:
    - host: null
      http:
        paths:
          - backend:
              service:
                name: gateway
                port:
                  number: 9033
            path: /
            pathType: ImplementationSpecific
    - host: null
      http:
        paths:
        - backend:
            service:
              name: gateway
              port:
                number: 9033
          path: /
          pathType: ImplementationSpecific
